--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,14 +33,14 @@ File: style.css
 @import 'scss/settings/theme-variables';
 
 // bootstrap
-@import 'node_modules/bootstrap/scss/bootstrap';
-@import 'node_modules/bootstrap/scss/mixins';
-@import 'node_modules/bootstrap/scss/utilities';
-@import 'node_modules/bootstrap/scss/utilities/api';
-@import '../node_modules/bootstrap/dist/css/bootstrap.css';
-@import 'scss/themes/general';
-@import 'scss/themes/generic';
-@import 'scss/themes/minixs/function';
+// @import 'node_modules/bootstrap/scss/bootstrap';
+// @import 'node_modules/bootstrap/scss/mixins';
+// @import 'node_modules/bootstrap/scss/utilities';
+// @import 'node_modules/bootstrap/scss/utilities/api';
+// @import '../node_modules/bootstrap/dist/css/bootstrap.css';
+// @import 'scss/themes/general';
+// @import 'scss/themes/generic';
+// @import 'scss/themes/minixs/function';
 
 // icon
 @import 'scss/themes/font/datta-icon';
