--- a/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
+++ b/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
@@ -89,7 +89,7 @@
         <div class="pro-head">
           <img src="assets/images/user/avatar-1.jpg" class="img-radius" alt="User-Profile-Image" />
           <span>John Doe</span>
-          <a href="javascript:" class="dud-logout" title="Logout">
+          <a href="javascript:" (click)="logout()" class="dud-logout" title="Logout">
             <i class="feather icon-log-out"></i>
           </a>
         </div>
