--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@ File: style.css
 @import 'node_modules/bootstrap/scss/variables';
 @import 'scss/settings/custom-variables';
 @import 'scss/settings/theme-variables';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 // bootstrap
 @import 'node_modules/bootstrap/scss/bootstrap';
