--- a/src/app/dashboard-client/dashboard-client.component.html
+++ b/src/app/dashboard-client/dashboard-client.component.html
@@ -1,7 +1,7 @@
 <app-sidebar></app-sidebar>
 <div class="containe">
   <nav class="navbar">
-    <span class="navContent"> Employee Management</span>
+    <span class="navContent">{{ title }}</span>
   </nav>
   <div class="content">
     <router-outlet></router-outlet>
