--- a/src/app/nav-bar-menu/nav-bar-menu.component.html
+++ b/src/app/nav-bar-menu/nav-bar-menu.component.html
@@ -26,15 +26,15 @@
     </div>
   </div>
   <div class="logout"><button class="btn-logout"  (click)="logout()"><img src="https://static-00.iconduck.com/assets.00/logout-icon-2048x1708-5s1s9mb0.png" alt=""> Log Out</button> </div>
-  <div class="dropdown">
-    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-    </a>
-
+  <div class="btn-group">
+    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+    </button>
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="#">Action</a></li>
       <li><a class="dropdown-item" href="#">Another action</a></li>
       <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
     </ul>
   </div>
 </nav>
