--- a/src/app/time-tracking/time-tracking.component.html
+++ b/src/app/time-tracking/time-tracking.component.html
@@ -7,7 +7,7 @@
 <div class="table">
 <table>
   <thead>
-    <tr >
+    <tr>
       <th colspan="5">PROJECT</th>
       <th colspan="3">TASK</th>
       <th colspan="3"><input type="text" [value]="weekDays.monday" placeholder="Monday"></th>
@@ -21,15 +21,32 @@
 </thead>
 <tbody id="tr1">
   <tr *ngFor="let task of tasks">
-      <td colspan="5"><select name="" id=""><option value="">Select Project</option> <option *ngFor="let item of project" value="{{ item.name }}">{{ item.name }}</option></select></td>
-      <td colspan="3"><select name="" id=""><option value="">Select Task</option></select></td>
-      <td colspan="3"><input type="text"  [value]="getTimeForDay(task, 'monday')"></td>
-      <td colspan="3"><input type="text" [value]="getTimeForDay(task, 'tuesday')" ></td>
-      <td colspan="3"><input type="text" [value]="getTimeForDay(task, 'wednesday')"></td>
-      <td colspan="3"><input type="text"[value]="getTimeForDay(task, 'thursday')" ></td>
-      <td colspan="3"><input type="text" [value]="getTimeForDay(task, 'friday')"></td>
-      <td class="total1"><input type="text" value="00:00" disabled></td>
-      <td colspan="3" id="del" class="del"><button class="btn">
+      <td colspan="5"><select name=""><option [(ngModel)]="task.project.id"  [ngModelOptions]="{standalone: true}" [value]="task.project?.name">
+        {{ task.project?.name ? task.project.name : 'Select Project' }}
+      </option></select></td>
+      <td colspan="3">
+        <input type="text" [(ngModel)]="task.activityName"  [ngModelOptions]="{standalone: true}">
+      </td>
+      <td colspan="3">
+        <input type="text" [(ngModel)]="task.monday" [ngModelOptions]="{standalone: true}">
+      </td>
+      <td colspan="3">
+        <input type="text" [(ngModel)]="task.tuesday" [ngModelOptions]="{standalone: true}">
+      </td>
+      <td colspan="3">
+        <input type="text" [(ngModel)]="task.wednesday" [ngModelOptions]="{standalone: true}">
+      </td>
+      <td colspan="3">
+        <input type="text" [(ngModel)]="task.tuesday" [ngModelOptions]="{standalone: true}">
+      </td>
+      <td colspan="3">
+        <input type="text" [(ngModel)]="task.friday" [ngModelOptions]="{standalone: true}">
+      </td>
+      <td class="total1">
+        <input type="text" value="00:00" disabled>
+      </td>
+
+      <td colspan="3" id="del" class="del"><button class="btn" (click)="deleteTask(task.id)">
         <svg viewBox="0 0 15 17.5" height="17.5" width="15" xmlns="http://www.w3.org/2000/svg" class="icon">
         <path transform="translate(-2.5 -1.25)" d="M15,18.75H5A1.251,1.251,0,0,1,3.75,17.5V5H2.5V3.75h15V5H16.25V17.5A1.251,1.251,0,0,1,15,18.75ZM5,5V17.5H15V5Zm7.5,10H11.25V7.5H12.5V15ZM8.75,15H7.5V7.5H8.75V15ZM12.5,2.5h-5V1.25h5V2.5Z" id="Fill"></path>
       </svg>
@@ -41,7 +58,7 @@
     <tr class="total">
         <td colspan="5"></td>
         <td colspan="3"><strong>Total:</strong></td>
-        <td colspan="3"><input type="text" value="00:00" disabled></td>
+        <td colspan="3"><input type="text" [value]="totalDay" disabled></td>
         <td colspan="3"><input type="text" value="00:00" disabled></td>
         <td colspan="3"><input type="text" value="00:00" disabled></td>
         <td colspan="3"><input type="text" value="00:00" disabled></td>
@@ -50,8 +67,9 @@
     </tr>
 </tfoot>
 </table>
-<p><button class="btn-add" (click)="Add()"><i class="fa-solid fa-plus fa-rotate-by" style="color: #7da8c9; --fa-rotate-angle: 1deg;"></i>Add timeSheet row</button></p>
+<p><button class="btn-add" (click)="Add()"><i class="fa-solid fa-plus fa-rotate-by" style="color: #7da8c9; --fa-rotate-angle: 1deg;"></i>Add timeSheet row</button></p><p class="save"><button  (click)="save()" id="save">Save <i class="fa-solid fa-floppy-disk" style="color:white;"></i></button></p>
 </div>
+
 <!-- <div class="input-container">
   <label for="select-day">Select a day: </label>
   <input type="date" id="select-day" [(ngModel)]="selectedDate" (change)="onDateChange($event)">
